monticore-generator/src/test/resources/cocos/invalid/A0276/A0276b.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A0276;

grammar A0276b extends cocos.invalid.A0276a {

  A = "int";

}